...
        android:paddingTop="15dp"
        android:scrollbars="none"
        android:verticalSpacing="10dp"/>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/fab_vertical_margin"
...
