...
<string name="search_med_hint">"Search by name or code…"</string>
<string name="pref_header_prescriptions">"Medicine database"</string>
<string name="medicine_edit_name_hint">"Write here…"</string>
<string name="enable_prescriptions_dialog_message">"You can easily add medicines and view leaflets by enabling a medicine database. If you prefer not to do it, you can activate it later from the settings menu."</string>
<string name="enable_prescriptions_dialog_title">"Medicine database"</string>
<string name="enable_prescriptions_dialog_yes">"Activate (Recommended)"</string>
<string name="enable_prescriptions_dialog_no">"Cancel"</string>
<string name="driving_warning">"Taking this medicine may have effects on your ability to drive.
Please carefully read the leaflet or ask your pharmacist before you get behind the wheel."</string>
<string name="driving_warning_title">"Be careful"</string>
<string name="driving_warning_show_prospect">"Read leaflet"</string>
<string name="driving_warning_gotit">"Understood"</string>
<string name="dialog_interval_title">"Interval"</string>
...
